--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,18 @@
     "axios": "^1.4.0",
     "mongoose": "^7.3.4",
     "nodemon": "^3.0.1",
-    "cookie-session": "^2.0.0"
+    "cookie-session": "^2.0.0",
+    "nanoid": "^4.0.2",
+    "pino": "^8.14.1",
+    "pino-pretty": "^10.2.0",
+    "zod": "^3.21.4",
+    "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.9",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.9"
   }
 }
